Update script source path for app.js

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
     </section>
   </main>
 
-  <script type="module" src="./app.js"></script>
+  <script type="module" src="/lab_tracker/app.js"></script>
 </body>
 </html>
